# salary-prediction-pwc

./: README.md  pyproject.toml  requirements.txt  run_api.sh  run_streamlit.sh
.streamlit/: config.toml
data/: ejemplo_prediccion.csv
data/raw/: descriptions.csv  people.csv  salary.csv
models/: metrics.json  predictor_model.joblib  preprocessor_pipeline.joblib
notebooks/: 01-eda.ipynb  03-final_report.ipynb  03-pipeline-demo.ipynb
src/: app.py
src/api/: main.py  schemas.py
src/config/: settings.py
src/data_processing/: pipeline.py
src/model/: evaluator.py  trainer.py
src/utils/: persistence.py
tests/: test_api.py  test_full_training.py  test_pipeline.py  test_pipeline_manual.py
