[project]
name = "salary-prediction-pwc"
version = "0.1.0"
description = "Modelo Predictivo de Salarios para el PwC Challenge"
authors = [
    {name = "Valentin Rosito", email = "valenrosito@icloud.com"},
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "scikit-learn",
    "pandas",
    "numpy",
    "joblib",
    "lightgbm",
    "shap",
    "tensorflow>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
    "matplotlib",
    "seaborn",
]
api = [
    "fastapi[all]",
    "pydantic[email]",
    "streamlit",
]
test = [
    "pytest",
    "httpx",
]
all = [
    "salary-prediction-pwc[dev, api, test]"
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"